--- a/index.html
+++ b/index.html
@@ -2,8 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="OR9BqhMOxse20UpFSOeT-zEUkQHkj0lLkL-pRKhwYbk" />
+    <meta
+      name="description"
+      content="Furqan Mebel - E-commerce platform offering a wide range of furniture and home decor products." />
+    <meta name="keywords" content="furniture, home decor, e-commerce, online shopping" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Furqan Mebel | E-commerce" />
+    <meta
+      property="og:description"
+      content="Furqan Mebel - E-commerce platform offering a wide range of furniture and home decor products." />
+    <meta property="og:image" content="/path/to/image.jpg" />
+    <meta property="og:url" content="https://www.yourwebsite.com" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Furqan Mebel | E-commerce" />
+    <meta
+      name="twitter:description"
+      content="Furqan Mebel - E-commerce platform offering a wide range of furniture and home decor products." />
+    <meta name="twitter:image" content="/path/to/image.jpg" />
+
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <title>Furqan Mebel | E-commerce</title>
   </head>
   <body>
