--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
   </head>
   <body>
     <div id="root"></div>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = "https://embed.tawk.to/66cf074850c10f7a00a14287/1i6cb8tei";
+        s1.charset = "UTF-8";
+        s1.setAttribute("crossorigin", "*");
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
