--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0NVR7HWJM0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-0NVR7HWJM0");
+    </script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="OR9BqhMOxse20UpFSOeT-zEUkQHkj0lLkL-pRKhwYbk" />
     <meta
       name="description"
-      content="Furqan Mebel - E-commerce platform offering a wide range of furniture and home decor products." />
-    <meta name="keywords" content="furniture, home decor, e-commerce, online shopping" />
+      content="FURQAN mebel - ölkəmizdə satış sahəsində böyük uğurlara imza atmış mebel və elektron mağazalar şəbəkəsidir. Yataq mebeli, qonaq, yumşaq, mətbəx, gənc mebellərinin sərfəli qiymətlərlə satışını təşkil edir." />
+    <meta name="keywords" content="mebel, mebel mağazaları, onlayn mebel, mebel istehsalı, mebel kataloqu" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -27,7 +39,7 @@
     <meta name="twitter:image" content="/path/to/image.jpg" />
 
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <title>Furqan Mebel | E-commerce</title>
+    <title>Mebel Furqan | Mebel mağazaları | Məişət əşyaları</title>
   </head>
   <body>
     <div id="root"></div>
