--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       content="Furqan Mebel - E-commerce platform offering a wide range of furniture and home decor products." />
     <meta name="twitter:image" content="/path/to/image.jpg" />
 
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon1616.ico" />
     <title>Mebel Furqan | Mebel mağazaları | Məişət əşyaları</title>
   </head>
   <body>
